--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,6 +27,7 @@ cmake_minimum_required(VERSION 2.8.0)
 add_subdirectory(core)
 add_subdirectory(hlo)
 add_subdirectory(hle)
+add_subdirectory(bsx)
 
 # TODO Clean up
 #add_subdirectory(hlp)
