More bsx ssh2 work.  -not thread safe yet.

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -46,6 +46,7 @@ SET(SRCS
     ./support/util.cc
     ./support/parsed_url.cc
     ./support/reqlet.cc
+    ./support/cmdlet.cc
     ./support/nconn.cc
     ./support/resolver.cc
 )
