--- a/src/hurl/CMakeLists.txt
+++ b/src/hurl/CMakeLists.txt
@@ -31,8 +31,9 @@ endif()
 LIST(APPEND INST_HDRS ${HDRS})
 
 # include paths
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}
-#${CMAKE_CURRENT_BINARY_DIR}
+include_directories(
+    ${CMAKE_CURRENT_SOURCE_DIR}
+    #${CMAKE_CURRENT_BINARY_DIR}
     ../../include
     ../../ext
     ../core/
